🦄 refactor(label): add editor role
spilt label into two part, viewer and editor

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,8 @@ set(PROJECT_SOURCES
         imageviewer.cpp
         label.h
         label.cpp
+        labeleditor.h
+        labeleditor.cpp
         types.h
         labelcategory.h
         labelcategory.cpp
